--- a/templates/accounts/user_management.html
+++ b/templates/accounts/user_management.html
@@ -8,9 +8,9 @@
             <h1 class="h3 mb-1">Gerenciar usuários</h1>
             <p class="text-muted mb-0">Crie novos acessos e defina as obras liberadas conforme o nível permitido.</p>
         </div>
-        <a href="#form-novo-usuario" class="btn btn-primary">
+        {% comment %} <a href="#form-novo-usuario" class="btn btn-primary">
             <i class="bi bi-person-plus me-2"></i>Novo usuário
-        </a>
+        </a> {% endcomment %}
     </div>
 
     <div class="row g-4">
