--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                                 <i class="bi bi-exclamation-triangle me-1"></i>Pendências
                             </a>
                         </li>
-                        {% if user.profile.role == 'admin' or 'nivel 2' %}
+                        {% if user.profile.role == 'admin' or user.profile.role == 'nivel2' %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'accounts:manage_users' %}">
                                     <i class="bi bi-people me-1"></i>Usuários
@@ -48,13 +48,13 @@
                             </li>
                         {% endif %}
                     
-                    {% if user.profile.role == 'admin' %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'obras:nova_obra' %}">
-                            <i class="bi bi-plus-circle me-1"></i>Nova Obra
-                        </a>
-                    </li>
-                    {% endif %}
+                        {% if user.profile.role == 'admin' %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'obras:nova_obra' %}">
+                                <i class="bi bi-plus-circle me-1"></i>Nova Obra
+                            </a>
+                        </li>
+                        {% endif %}
                     {% if user.is_staff %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'admin:index' %}">
